--- a/packages/cool-web/public/locales/cn/common.json
+++ b/packages/cool-web/public/locales/cn/common.json
@@ -8,5 +8,11 @@
   "venture-capital-incubation-service": "创投孵化服务",
   "equity-financing-business-process": "业务流程",
   "information-centre": "资讯中心",
-  "title": "卿逢轩咨询管理有限公司"
+  "title": "卿逢轩咨询管理有限公司",
+  "home": "首页",
+  "Home": "首页",
+  "consultation-service": "咨询服务",
+  "software-development-digital-transformation": "软件开发及数字化转型",
+  "about-us": "关于我们",
+  "equity-financing-consultant": "股权融资顾问"
 }
